--- a/sperated_db_api/views/Sai_Drushti.ejs
+++ b/sperated_db_api/views/Sai_Drushti.ejs
@@ -11,7 +11,9 @@
             zoom: 95%;
             font-family: Arial, sans-serif;
         }
-
+.body{
+    position: relative;
+}
         .invoice-header {
             display: flex;
             justify-content: space-between;
@@ -45,7 +47,7 @@
             font-size: 14px;
         }
 
-        .invoice-detail {
+        .invoice-detail-recepit {
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -55,15 +57,25 @@
             line-height: 15px;
             font-size: 14px;
         }
+        .invoice-detail-invoice {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            border: 1px solid;
+            height: 140px;
+            line-height: 15px;
+            font-size: 14px;
+        }
 
-        .invoice-detail .col-1 {
+        .invoice-detail-recepit .col-1,  .invoice-detail-invoice .col-1{
             width: 35%;
             float: left;
             font-weight: 400;
             padding-left: 1%;
         }
 
-        .invoice-detail .col-2 {
+        .invoice-detail-recepit .col-2 {
             width: 30%;
             float: left;
             font-weight: 400;
@@ -73,16 +85,36 @@
             font-size: 14px;
             color: red;
         }
+ .invoice-detail-invoice .col-2{
+            width: 30%;
+            float: left;
+            font-weight: 400;
+            border-left: 1px solid #000;
+            border-right: 1px solid #000;
+            height: 140px;
+            font-size: 14px;
+            color: red;
+        }
 
-        .invoice-detail .col-3 {
+        .invoice-detail-recepit .col-3, .invoice-detail-invoice .col-3{
             width: 34%;
             float: right;
             font-weight: 400;
         }
 
+        .invoice-eye-title{
+           width: 100%;
+            padding-top: 1%; 
+            text-align: center !important;
+            padding-left: 35%;
+        }
+        .invoice-eye-title .col-2{
+            border: 1px solid;
+            border-bottom: none !important;
+           width: 30.1%;
+        }
         .invoice-eye {
             width: 100%;
-            padding-top: 1%;
         }
 
         .eye-container th,
@@ -96,13 +128,14 @@
         .invoice-prodcut{
             width: 100%;
             padding-top: 1%;
-            height: 800px;
+           
         }
 
         .invoice-footer{
+            position: absolute;
             width: 100%;
-            padding-top: 1%;
             font-size: 14px;
+           top: 930px;
             
         }
 
@@ -114,7 +147,7 @@
         .invoice-footer .foo1 p{
             margin: 0;
             padding: 0;
-           line-height: 20px;
+           line-height: 27px;
            font-size: 14px;
 
         }
@@ -150,16 +183,10 @@
         </div>
     </section>
 
-    <section class="invoice-detail">
+    <% if (data.bill !=='Tax Invoice' ){%>
+    <section class="invoice-detail-recepit">
         <table class="col-1">
-            <tr>
-                <% if (data.bill !=='Tax Invoice' ){%>
-                <td>ORDER NO- <%=data.billMaster.InvoiceNo%></td>
-                <%}%>
-                <% if (data.bill ==='Tax Invoice' ){%>
-                <td>INVOICE NO- <%=data.billMaster.InvoiceNo%></td>
-                <%}%>
-            </tr>
+            
             <tr>
                 <td>NAME- <%=data.customer.Title%> <%=data.customer.Name%></td>
             </tr>
@@ -172,23 +199,73 @@
             <tr>
                 <td>MB NO- <%=data.customer.MobileNo1%></td>
             </tr>
+           
+            
         </table>
         <table class="col-2">
             <tr>
                 <th style="text-transform: uppercase !important;"><%=data.bill%></th>
             </tr>
-            <% if (data.ShowPower === true){%>
-            <tr>
-                <th>REFRACTIVE ERROR</th>
-            </tr>
-            <%}%>
+           
         </table>
         <table class="col-3">
+            <tr>
+                <td>CUSTOMER ID- <%=data.customer.Idd%></td>
+            </tr>
+            <tr>
+                <td>ORDER NO- <%=data.billMaster.InvoiceNo%></td>
+            </tr>
             <tr>
                 <td>ORDER DATE- <%=data.billMaster.BillDate%></td>
             </tr>
             <tr>
-                <td>DELIVERD DATE- <%=data.billMaster.DeliveryDate%></td>
+                <td>DELIVERY DATE- <%=data.billMaster.DeliveryDate%></td>
+            </tr>
+            <tr>
+                <td>SALES PERSON- <%=data.employee%></td>
+            </tr>
+        </table>
+        
+    </section>
+    <%}%>
+    <% if (data.bill ==='Tax Invoice' ){%>
+    <section class="invoice-detail-invoice">
+        <table class="col-1">
+            
+            <tr>
+                <td>NAME- <%=data.customer.Title%> <%=data.customer.Name%></td>
+            </tr>
+            <tr>
+                <td>ADDRESS- <%=data.customer.Address%> </td>
+            </tr>
+            <tr>
+                <td>AGE- <%=data.customer.Age%></td>
+            </tr>
+            <tr>
+                <td>MB NO- <%=data.customer.MobileNo1%></td>
+            </tr>
+            <tr>
+                <td>GST NO. <%=data.customer.GSTNo%></td>
+             
+            </tr>
+            
+        </table>
+        <table class="col-2">
+            <tr>
+                <th style="text-transform: uppercase !important;"><%=data.bill%></th>
+            </tr>
+         
+        </table>
+        <table class="col-3">
+         
+            <tr>
+                <td>INVOICE NO- <%=data.billMaster.InvoiceNo%></td>
+            </tr>
+            <tr>
+                <td>ORDER DATE- <%=data.billMaster.BillDate%></td>
+            </tr>
+            <tr>
+                <td>DELIVERY DATE- <%=data.billMaster.DeliveryDate%></td>
             </tr>
             <tr>
                 <td>SALES PERSON- <%=data.employee%></td>
@@ -200,9 +277,18 @@
                 <td>REMARK- </td>
             </tr>
         </table>
-
     </section>
+    <%}%>
     <% if (data.ShowPower === true){%>
+        <section class="invoice-eye-title">
+        <table class="col-2">
+            <% if (data.ShowPower === true){%>
+            <tr>
+                <th>REFRACTIVE ERROR</th>
+            </tr>
+            <%}%>
+        </table>
+    </section>
     <section class="invoice-eye">
         <% if(data.EyeMeasurement !== null && data.EyeMeasurement.length !== 0){ data.EyeMeasurement.forEach(function (i, index) { %>
         <table class="eye-container" style="width: 100%; border-collapse: collapse;">
@@ -249,7 +335,7 @@
                 <th>TOTAL</th>
                 <th>DISC</th>
                 <th>SUB TOTAL</th>
-                <% if (data.shopdetails.Tax==="true" &&  data.bill==='Tax Invoice' ){%>
+                <% if (data.shopdetails.Tax==="true"  ){%>
                 <th>CGST 
                     <% if (data.billItemList[0].ProductTypeName == 'FRAME' || data.billItemList[0].ProductTypeName == 'LENS' || data.billItemList[0].ProductTypeName == 'CONTACT LENS'){%>
                       6%
@@ -287,7 +373,7 @@
                 <td><%= i.Quantity * i.UnitPrice%></td>
                 <td><%= i.DiscountAmount %></td>
                 <td><%= i.SubTotal %></td>
-                <% if (data.shopdetails.Tax==="true" &&  data.bill==='Tax Invoice' ){%>
+                <% if (data.shopdetails.Tax==="true" ){%>
                 <td><%= i.GSTAmount %></td>
                 <td><%= i.GSTAmount %></td>
                 <%}%>
@@ -301,7 +387,7 @@
                 <td><%= data.totalRate %></td>
                 <td style="color: red;"><%= data.totalDiscounts %></td>
                 <td><%= data.billMaster.SubTotal %></td>
-                <% if (data.shopdetails.Tax==="true" &&  data.bill==='Tax Invoice' ){%>
+                <% if (data.shopdetails.Tax==="true" ){%>
                 <td><%= data.billMaster.GSTAmount/2 %></td>
                 <td><%= data.billMaster.GSTAmount/2 %></td>
                 <%}%>
@@ -332,21 +418,34 @@
         </div>
         <%}%>
         <div class="foo2" >
-            <table class="fool-container" style="width: 100%; border-collapse: collapse; position: relative;">
+            <table class="fool-container" style="width: 95%; border-collapse: collapse; position: relative;">
                 <tr>
-                    <th>PAYBLE AMT</th>
+                    <th>TOTAL AMT</th>
                     <th> <%= data.billMaster.TotalAmount %></th>
                 </tr>
                 <tr>
-                    <th>PAID  AMT</th>
-                    <th><%= data.recivePayment.toFixed(2) %></th>
+                    <th>DISCOUNT AMT</th>
+                    <th> <%= data.billMaster.DiscountAmount %></th>
                 </tr>
-                <% if (data.bill !== 'Tax Invoice' ){%>
+                <tr>
+                    <th>PAYBLE AMT</th>
+                    <th> <%= data.billMaster.TotalAmount - (data.billMaster.DiscountAmount + data.billMaster.AddlDiscount )  %></th>
+                </tr>
+                <tr>
+                    <% if (data.bill !== 'Tax Invoice' ){%>
+                    <th>ADVANCE AMT</th>
+                      <%}%>
+                    <% if (data.bill === 'Tax Invoice' ){%>
+                    <th>PAID AMT</th>
+                      <%}%>
+                    <th><%= data.recivePayment.toFixed(0) %></th>
+                </tr>
+                
                 <tr>
                     <th>BALANCE AMT</th>
                     <th>  <%= data.CurrentInvoiceBalance %></th>
                 </tr>
-                <%}%>
+              
                 <tr>
                     <th>PAYMENT MODE</th>
                     <th>
@@ -358,8 +457,8 @@
                 </th>
                 </tr>
             </table>
-            <div style="position: absolute; bottom: 0; border: 1px solid #000; width: 33%; height: 80px; ">
-                <img src="https://theopticalguru.relinksys.com/assest/sai-sign.png" alt="sign" <% %> style="width:100px;height: 30px; padding-top: 1%;">
+            <div style=" bottom: 0; border: 1px solid #000; width: 95%; height: 90px; ">
+                <img src="https://theopticalguru.relinksys.com/assest/sai-sign.png" alt="sign" <% %> style="width:120px;height: 40px; padding-top: 1%;">
                 <p style="margin: 0; font-size: 12px; padding-top: 1px;">
                     SIGN <br> SAIDRUSHTI NETRASEVA CHASHMAGHAR <br> PROP. SACHIN AHER  (CONSULTANT OPTOMETRIST)
                 </p>
