--- a/web1/src/app/admin/dashborad.component.css
+++ b/web1/src/app/admin/dashborad.component.css
@@ -49,12 +49,12 @@
 .table2 thead tr th {
  background-color: #1e2672fc;
  font-size: large;
- padding: 1%;
+ padding: 10px;
  color: #fff;
 }
 .table2 tbody tr td {
- font-size: large;
- padding: 1%;
+    font-size: 16px;
+    padding: 10px;
 }
 
 .table2 tbody tr:nth-child(even) {
@@ -69,9 +69,8 @@
   text-transform: none !important;
   line-height: 1;
   font-weight: 500;
-  font-size: 20px !important;
-
-  padding: 17px 29px 16px ;
+     font-size: 20px !important;
+    padding: 10px 24px 10px;
 }
 
 
@@ -89,4 +88,15 @@
     font-weight: bolder;
     color: #fff;
     text-align: center;
+}
+
+.table2 tfoot tr th{
+  position: sticky;
+  bottom: 0;
+  background: white;
+  z-index: 0;
+  border: 1px solid #b0b0b0;
+  color: red;
+  font-size: large;
+ padding: 10px;
 }
