--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -112,7 +112,7 @@
                           style="white-space: nowrap;">
                           <td style="width: 7%;">
 
-                              <button  type="button" class="bg-btn " (click)="sendEmail(data)">
+                              <button *ngIf="this.company.EmailMsg == 'true'" type="button" class="bg-btn " (click)="sendEmail(data)">
                               <mat-icon class="delete_icon me-1">email</mat-icon>
                             </button>
 
