--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="col-md-1 col-6 order-1 order-md-1 ms-auto">
                   <div class="input-group">
-                    <input placeholder="Reg No." [(ngModel)]="term1" #RegNo mdbInput type="search" id="form1"
+                    <input placeholder="BillBook No." [(ngModel)]="term1" #RegNo mdbInput type="search" id="form1"
                       class="form-control" />
                   </div>
                 </div>
@@ -112,7 +112,7 @@
                           <th>Cust_ID</th>
                           <th>Customer</th>
                           <th>MoblieNo.</th>
-                          <th>RegNo.</th>
+                          <th>BillBookNo.</th>
                           <th>Invoice/Order#</th>
                           <th>InvoiceDate/OrderDate</th>
                           <th>ProductStatus</th>
