--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -6,7 +6,7 @@
                 <h4 style="font-weight: 800;">New Bill </h4>
             </div>
             <div class="col-lg-1 col-md-2 col-4">
-                    <input placeholder="Reg No." name="RegNo" [(ngModel)]="BillMaster.RegNo"
+                    <input placeholder="Bill Book No." name="RegNo" [(ngModel)]="BillMaster.RegNo"
                      #RegNoNocontrol style="height: 20px;width: 115px;">
             </div>
             
