--- a/sperated_db_api/views/Sai_Drushti.ejs
+++ b/sperated_db_api/views/Sai_Drushti.ejs
@@ -11,9 +11,7 @@
             zoom: 95%;
             font-family: Arial, sans-serif;
         }
-.body{
-    position: relative;
-}
+
         .invoice-header {
             display: flex;
             justify-content: space-between;
@@ -44,7 +42,8 @@
             margin: 0;
             color: rgb(0, 0, 0);
             text-align: left;
-            font-size: 14px;
+            font-size: 16px;
+            line-height: 27px;
         }
 
         .invoice-detail-recepit {
@@ -132,30 +131,30 @@
         }
 
         .invoice-footer{
-            position: absolute;
+          margin-top: 2%;
             width: 100%;
             font-size: 14px;
-           top: 930px;
+         
             
         }
 
         .invoice-footer .foo1{
-            width: 65%;
+            width: 64%;
             float: left;
-            
+            height: 267px;
         }
         .invoice-footer .foo1 p{
             margin: 0;
-            padding: 0;
-           line-height: 27px;
+           padding-bottom: 1.8%;
+           line-height: 22px;
            font-size: 14px;
 
         }
       
 
         .invoice-footer .foo2{
-            width: 34%;
-            text-align: center;
+            width: 35%;
+            text-align: center !important;
             float: right;
             
         }
@@ -175,7 +174,6 @@
         </div>
         <div class="company-info">
             <h3>SAIDRUSHTI NETRASEVA CHASHMAGHAR</h3>
-            <h3>AKOLE</h3>
             <p>ADDRESS-SHOP NO 2, BACK SIDE OF VISION EYEPLUS, BEHIND BUS STAND. A-P/TALK - AKOLE, DIST- AHILYANAGAR,
                 PIN 422601</p>
             <p>MB 9136529393, GMAIL-RAJVEERAHER@GMAIL.COM</p>
@@ -184,7 +182,7 @@
     </section>
 
     <% if (data.bill !=='Tax Invoice' ){%>
-    <section class="invoice-detail-recepit">
+    <section class="invoice-detail-recepit" style="margin-top: 3%;" >
         <table class="col-1">
             
             <tr>
@@ -228,8 +226,9 @@
         
     </section>
     <%}%>
+
     <% if (data.bill ==='Tax Invoice' ){%>
-    <section class="invoice-detail-invoice">
+    <section class="invoice-detail-invoice " style="margin-top: 3%;">
         <table class="col-1">
             
             <tr>
@@ -279,8 +278,9 @@
         </table>
     </section>
     <%}%>
+
     <% if (data.ShowPower === true){%>
-        <section class="invoice-eye-title">
+        <section class="invoice-eye-title" style="margin-top: 3%;">
         <table class="col-2">
             <% if (data.ShowPower === true){%>
             <tr>
@@ -324,7 +324,7 @@
     </section>
     <%}%>
 
-    <section class="invoice-prodcut">
+    <section class="invoice-prodcut" style="margin-top: 3%;">
         <table class="prodcut-container" style="width: 100%; border-collapse: collapse;">
             <tr>
                 <th>SR NO</th>
@@ -380,6 +380,9 @@
                 <td><%= i.TotalAmount %></td>
             </tr>
             <%})}%>
+
+           
+
             <tr class="total">
                 <td colspan="3">TOTAL</td>
                 <td><%= data.billMaster.Quantity %></td>
@@ -397,7 +400,7 @@
     </section>
 
 
-    <section class="invoice-footer " style="position: fixed; bottom: 0%; " >
+    <section class="invoice-footer " >
         <% if (data.bill !== 'Tax Invoice' ){%>
         <div class="foo1" style="border: 1px solid #000;text-transform: uppercase;">
             <p>* Please collect your spect within 15 days from the date of order.</p>
@@ -418,7 +421,7 @@
         </div>
         <%}%>
         <div class="foo2" >
-            <table class="fool-container" style="width: 95%; border-collapse: collapse; position: relative;">
+            <table class="fool-container" style="width: 100%; border-collapse: collapse; position: relative;">
                 <tr>
                     <th>TOTAL AMT</th>
                     <th> <%= data.billMaster.TotalAmount %></th>
@@ -457,10 +460,10 @@
                 </th>
                 </tr>
             </table>
-            <div style=" bottom: 0; border: 1px solid #000; width: 95%; height: 90px; ">
+            <div style=" bottom: 0; border: 1px solid #000; width: 100%; height: 120px; ">
                 <img src="https://theopticalguru.relinksys.com/assest/sai-sign.png" alt="sign" <% %> style="width:120px;height: 40px; padding-top: 1%;">
-                <p style="margin: 0; font-size: 12px; padding-top: 1px;">
-                    SIGN <br> SAIDRUSHTI NETRASEVA CHASHMAGHAR <br> PROP. SACHIN AHER  (CONSULTANT OPTOMETRIST)
+                <p style="margin: 0; font-size: 14px; padding-top: 1px;">
+                    SIGN <br> SAIDRUSHTI NETRASEVA CHASHMAGHAR <br> PROP. SACHIN AHER <br> (CONSULTANT OPTOMETRIST)
                 </p>
             </div>
         </div>
