--- a/web1/src/app/admin/employee/employee.component.html
+++ b/web1/src/app/admin/employee/employee.component.html
@@ -125,13 +125,13 @@
                                                     required>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-md-4 col-sm-6 col-6 ">
+                                        <div class="col-md-3 col-sm-6 col-6 ">
                                             <mat-slide-toggle type="ratio" name="DiscountPermission" color="primary"
                                                 [(ngModel)]="data.DiscountPermission" class="example-margin">Discount
                                                 Permission After The Bill
                                             </mat-slide-toggle>
                                         </div>
-                                        <div class="col-md-4 col-sm-6 col-6 ">
+                                        <div class="col-md-3 col-sm-6 col-6 ">
                                             <mat-slide-toggle type="ratio" name="SalePermission" color="primary"
                                                 [(ngModel)]="data.SalePermission" class="example-margin">Sale Price Change
                                                 Permission 
@@ -139,6 +139,18 @@
                                         </div>
                                     </div>
                                     <div class="row">
+                                        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                                           
+                                             <mat-form-field class="example-full-width mb-0">
+                                                <mat-label>User Group</mat-label>
+                                                <mat-select name="UserGroup" [(ngModel)]="data.UserGroup"
+                                                    required #UserGroupTypecontrol>
+                                                    <mat-option value='CompanyAdmin'>CompanyAdmin</mat-option>
+                                                    <mat-option value='Employee'>Employee</mat-option>
+                                                </mat-select>
+                                                <mat-error> Select UserGroupe</mat-error>
+                                            </mat-form-field>
+                                        </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>LoginName</mat-label>
