--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -64,7 +64,7 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                            <!-- <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Payment Status</mat-label>
                                                     <mat-select name="PaymentStatus" [(ngModel)]="data.PaymentStatus">
@@ -73,7 +73,7 @@
                                                         <mat-option value="Unpaid">Unpaid(Pending)</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
-                                            </div>
+                                            </div> -->
                                             <div class="col-xl-2 col-lg-4 col-md-4 col-12 mb-0 ">
                                                 <button class="me-2" type="submit" mat-raised-button color="primary">
                                                     Search
@@ -81,6 +81,9 @@
                                                 <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                                     Reset
                                                 </button>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                                
                                             </div>
                                         </div>
                                     </form>
