--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3249,7 +3249,7 @@
                                                                     {{data.MonthYear}} {{data.YEAR}}</td>
                                                                 <td>{{data.Amount}}</td>
                                                                 <td>{{data.Paid}}</td>
-                                                                <td>{{data.Balance}}</td>
+                                                                <td style="color:red">{{data.Balance}}</td>
 
                                                             </tr>
                                                         </tbody>
