--- a/sperated_db_api/views/invoice_Box.ejs
+++ b/sperated_db_api/views/invoice_Box.ejs
@@ -714,6 +714,11 @@
 
             <!-- improtant note billtotal start -->
             <section >
+                <% if (data.shopdetails.CompanyID == 373 ){%>
+                 <div style="width: 100%; text-align: right; border-right:1px solid ; border-left:1px solid ; padding-right: 1%; padding-top: 4px; padding-bottom: 3px;">
+                     <span>Amount in words <%= numberToWords(data.billMaster.TotalAmount ) %></span>
+                </div>
+                <%}%>
                 <div class="billTotalRow" style="border: 1px solid #000; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: .5%; position: relative; ">
                     <% if (data.Signature != 'http://localhost:3000/null' && data.Signature != 'http://localhost:3000/undefined'){%>
                         <img src="<%= data.Signature %>" alt="Signature" style="width: 100px;position:absolute; left: 55%;top: 10%;">
@@ -737,10 +742,13 @@
                              <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0; padding-top:10px;"> <%= data.shopdetails.ShopTiming %>  </h4> 
 <%}%>
  <% if (data.shopdetails.CompanyID == 373 ){%>
-         <h4 <% %> style="padding: 0; margin:0; padding-top:10px;"> Bank Name - Induslnd Bank </h4> 
-         <h4 <% %> style="padding: 0; margin:0; padding-top:10px;"> A/c No. - 201033890138 </h4> 
-         <h4 <% %> style="padding: 0; margin:0; padding-top:10px;"> IFSC - INDB0000215 </h4> 
-         <h4 <% %> style="padding: 0; margin:0; padding-top:10px;"> Branch - Jorhat Branch J.B Road, Madhu Market, 1st Floor, Jorhat, Assam - Pin 785001 </h4> 
+    <h3 <% %> style="color: <%= data.Color %>;padding: 0; margin:0;">Bank Details</h3>
+ 	<h4 <% %> style="padding: 0; margin:0; padding-top:5px;"> Firm Name - Prabhu Optical</h4> 
+         <h4 <% %> style="padding: 0; margin:0; padding-top:5px;"> Bank Name - Induslnd Bank </h4> 
+         <h4 <% %> style="padding: 0; margin:0; padding-top:5px;"> A/c No. - 201033890138 </h4> 
+         <h4 <% %> style="padding: 0; margin:0; padding-top:5px;"> IFSC - INDB0000215 </h4> 
+         <h4 <% %> style="padding: 0; margin:0; padding-top:5px;"> Branch - Jorhat Branch J.B Road, Madhu Market, 1st Floor, Jorhat, Assam - Pin 785001 </h4> 
+ 	<h4 <% %> style="padding: 0; margin:0; padding-top:5px;"> Subject to Jorhat Jurisdiction Only </h4>   
     <%}%>
                     </div>
                     <div class="col2">
@@ -828,6 +836,48 @@
           
               <!-- You've Saved  end -->
             </section>
+
+                <% 
+    function numberToWords(num) {
+        const belowTwenty = ["", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine", "Ten", "Eleven", "Twelve", "Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen", "Eighteen", "Nineteen"];
+        const tens = ["", "", "Twenty", "Thirty", "Forty", "Fifty", "Sixty", "Seventy", "Eighty", "Ninety"];
+    
+        function convertToWords(n) {
+        if (n === 0) return "Zero";
+        if (n < 20) return belowTwenty[n];
+        if (n < 100) return tens[Math.floor(n / 10)] + (n % 10 !== 0 ? " " + belowTwenty[n % 10] : "");
+        if (n < 1000) return belowTwenty[Math.floor(n / 100)] + " Hundred" + (n % 100 !== 0 ? " " + convertToWords(n % 100) : "");
+        if (n < 100000) return convertToWords(Math.floor(n / 1000)) + " Thousand" + (n % 1000 !== 0 ? " " + convertToWords(n % 1000) : "");
+        if (n < 10000000) return convertToWords(Math.floor(n / 100000)) + " Lakh" + (n % 100000 !== 0 ? " " + convertToWords(n % 100000) : "");
+        return convertToWords(Math.floor(n / 10000000)) + " Crore" + (n % 10000000 !== 0 ? " " + convertToWords(n % 10000000) : "");
+    }
+    
+        return convertToWords(num);
+    }
+    %>
 </body>
 
 </html>
+
+<!-- numberToWords -->
+<script>
+function numberToWords(num) {
+    const belowTwenty = ["", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine", "Ten",
+                         "Eleven", "Twelve", "Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen",
+                         "Eighteen", "Nineteen"];
+    const tens = ["", "", "Twenty", "Thirty", "Forty", "Fifty", "Sixty", "Seventy", "Eighty", "Ninety"];
+
+    function convertToWords(n) {
+        if (n === 0) return "Zero";
+        if (n < 20) return belowTwenty[n];
+        if (n < 100) return tens[Math.floor(n / 10)] + (n % 10 !== 0 ? " " + belowTwenty[n % 10] : "");
+        if (n < 1000) return belowTwenty[Math.floor(n / 100)] + " Hundred" + (n % 100 !== 0 ? " " + convertToWords(n % 100) : "");
+        if (n < 100000) return convertToWords(Math.floor(n / 1000)) + " Thousand" + (n % 1000 !== 0 ? " " + convertToWords(n % 1000) : "");
+        if (n < 10000000) return convertToWords(Math.floor(n / 100000)) + " Lakh" + (n % 100000 !== 0 ? " " + convertToWords(n % 100000) : "");
+        return convertToWords(Math.floor(n / 10000000)) + " Crore" + (n % 10000000 !== 0 ? " " + convertToWords(n % 10000000) : "");
+    }
+
+    return convertToWords(num);
+}
+
+</script>
