--- a/garment/web/src/app/common/login.component.css
+++ b/garment/web/src/app/common/login.component.css
@@ -11,11 +11,11 @@ body {
 
 .img-bgm{
   position: absolute;
-  background-image: url(../../assets/images/img-sun-bgm.png);
+  background-image: url(https://img.freepik.com/premium-vector/clothes-items-white-background-seamless-pattern-thin-line_48369-13298.jpg?semt=ais_hybrid&w=740);
   background-repeat: repeat;
-  background-size: 25% ;
+  background-size: 50% ;
   background-position: center;
-  opacity: .05;
+  opacity: .1;
   width: 95%;
   height: 100%;
   top: 0;
